# meertime_dataportal

./: .arcconfig  .arclint  .codeclimate.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  Override.mk  README.md  build.sh  docker-compose.yaml  docker-compose.yml  package-lock.json  postgres.conf  pyproject.toml  sql.cfn
backend/: .coveragerc  .env.template  2  2q  conftest.py  default_users.txt  manage.py  pyproject.toml  request_file_download_id.py  request_file_list.py  run_coverage.sh  run_tests.sh  setup.cfg
backend/cli/: ingest_ptuse_folded.py  ingest_ptuse_search.py  psrdb.py  pyproject.toml
backend/cli/joins/: __init__.py  folded_observations.py  processed_observations.py
backend/cli/tables/: __init__.py  basebandings.py  calibrations.py  collections.py  ephemerides.py  filterbankings.py  foldings.py  graphql_query.py  graphql_table.py  instrumentconfigs.py  launches.py  observations.py  pipelinefiles.py  pipelineimages.py  pipelines.py  processingcollections.py  processings.py  programs.py  projects.py  pulsars.py  pulsartargets.py  sessions.py  targets.py  telescopes.py  templates.py  toas.py
backend/cli/tests/: helpers.py  test_calibrations.py  test_ephemerides.py  test_filterbankings.py  test_foldings.py  test_instrumentconfigs.py  test_launches.py  test_pipelinefiles.py  test_pipelineimages.py  test_pipelines.py  test_processings.py  test_projects.py  test_templates.py  test_toas.py
backend/cli/util/: decimal.py  ephemeris.py  header.py
backend/dataportal/: admin.py  apps.py  emails.py  file_utils.py  logic.py  models.py  plots.py  relay_queries.py  schema.py  serializers.py  signals  signals.py  storage.py  test_models.py  test_plots.py  test_relay_queries.py  test_storage.py  urls.py  views.py
backend/dataportal/graphql/: __init__.py  contact_mutations.py  jsonfield_filter.py  mutations.py  project_membership_mutations.py  project_membership_queries.py  queries.py
backend/dataportal/migrations/: 0001_initial.py  0002_alter_observation_calibration.py  0002_auto_20200825_0640.py  0002_auto_20210218_0349.py  0002_rename_fold_nsub_observation_fold_tsubint.py  0003_auto_20210407_0138.py  0003_auto_20230613_0200.py  0003_auto_20230804_0544.py  0004_auto_20210407_0247.py  0004_auto_20230613_0651.py  0004_auto_20230804_0635.py  0005_alter_calibration_options.py  0005_auto_20201016_0315.py  0005_auto_20210413_0255.py  0005_auto_20230615_0151.py  0006_auto_20210829_0722.py  0006_auto_20230616_0453.py  0006_observationsummary.py  0007_alter_observationsummary_obs_type.py  0007_alter_template_template_file.py  0007_auto_20210902_2316.py  0007_ephemerides_ephemeris_hash.py  0008_auto_20230619_0313.py  0008_auto_20230814_0214.py  0008_update_ephemeris_hash.py  0009_auto_20230620_0434.py  0009_delete_pipelinefile.py  0009_remove_duplicate_ephemeris_for_pulsars.py  0010_auto_20230621_0022.py  0010_auto_20230829_0808.py  0010_merge_20210906_0143.py  0011_auto_20210906_1215.py  0011_auto_20230621_0034.py  0011_pulsarsearchsummary.py  0012_auto_20210928_0220.py  0012_auto_20230625_0857.py  0012_auto_20230905_0418.py  0013_auto_20210930_0430.py  0013_foldpulsarsummary_all_bands.py  0013_pulsarfoldsummary_latest_observation_beam.py  (+52 more)
backend/dataportal/tests/: test_backend_queries.py  test_badges.py  test_base.py  test_contact_form_graphql.py  test_ephemeris_embargo.py  test_file_utils.py  test_frontend_queries.py  test_graphql_access_control.py  test_graphql_all_filters.py  test_graphql_contract_schema.py  test_graphql_login_required_contract.py  test_graphql_resolver_edge_cases.py  test_ingest.py  test_logic.py  test_membership_reminder_command.py  test_models.py  test_models_coverage.py  test_multiproject_toas.py  test_observation_embargo.py  test_observation_node_embargo.py  test_project_catalogue_config.py  test_project_configuration_query.py  test_project_hierarchy.py  test_project_membership.py  test_project_membership_graphql.py  test_project_runtime_config.py  test_protected_media.py  test_queries_coverage.py  test_resolve_residual_ephemeris.py  test_storage.py  test_template_model.py  test_template_resolver.py  test_toa_residual_ingest.py  test_upload_views.py  test_views.py  testing_utils.py
backend/ingest/: example.input  ingest_methods.py  parse_cfg.py  slack.py  test_ingest.py
backend/ingest-ajameson/: bulk_ingest.sh  db_structure.sql  ingest_ptuse_folding.py
backend/ingest-ajameson/database/: calibrations.py  dbmanager.py  ephemerides.py  foldings.py  pipelineimages.py  pipelines.py  processings.py  projects.py  psrdb.py  targets.py  telescopes.py
backend/ingest-ajameson/util/: ephemeris.py  time.py
backend/jobcontroller/: __init__.py  apps.py  mutations.py  queries.py  request_file_list.py
backend/meertime/: schema.py  test_graphql.py  urls.py
backend/meertime/settings/: __init__.py  authentication.py  cache.py  database.py  development.py  django_debug_toolbar.py  email.py  file_download.py  graphene.py  job_controller.py  kronos_payload.py  logging.py  sentry_dsn.py  settings.py  testing.py
backend/templates/: base_generic.html
backend/user_manage/: Readme.md  __init__.py  admin.py  apps.py  backends.py  middleware.py  models.py  signals.py  urls.py  utility.py  views.py
backend/user_manage/graphql/: decorators.py  mutations.py  queries.py  token_mutations.py  types.py
backend/user_manage/migrations/: 0001_initial.py  0002_add_default_users.py  0002_create_user_roles.py  0002_passwordresetrequest.py  0003_add_meertime_svc_permission.py  0003_auto_20220401_0230.py  0003_auto_20220620_2336.py  0004_add_api_admin_user.py  0005_update_users_for_flagged_feature.py  0006_alter_user_first_name.py  0007_apitoken.py  0008_add_unique_token_name_per_user.py
backend/user_manage/tests/: test_admin_api_graphql.py  (+5 more)
backend/utils/: binary_phase.py  constants.py  ephemeris.py  observing_bands.py  toa.py  utility.py
backend/web_cache/: __init__.py  apps.py  models.py  mutations.py  plot_types.py  queries.py  signals.py  test_models.py  test_queries.py  test_signals.py  testing_utils.py
(+949 files in other folders)
