[tool.poetry]
name = "meertime-data-portal"
version = "0.1.0"
description = ""
authors = ["GWDC"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "<3"
django-environ = "^0.4.5"
mysql-connector-python = "^8.0.21"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-django = "^3.9.0"
pylint = "^2.5.3"
black = "^19.10b0"

[tool.black]
line-length = 90
target_version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |src/templates
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
