[tool.poetry]
name = "meertime-data-portal"
version = "0.1.0"
description = ""
authors = ["GWDC"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "<3"
django-environ = "^0.4.5"
gunicorn = "^20.0.4"
mysqlclient = "^2.0.1"
sentry-sdk = "^0.16.3"
django-mathfilters = "^1.0.0"
graphene-django = "^2.12.1"
django-graphql-jwt = "^0.3.1"
django-debug-toolbar = "^2.2"
django-split-settings = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-django = "^3.9.0"
pylint = "^2.5.3"
black = "^19.10b0"
pytest-cov = "^2.10.0"
django-test-migrations = "^1.0.0"
django-coverage-plugin = "^1.8.0"
django-querycount = "^0.7.0"
nplusone = "^1.0.0"
coverage = "^5.2.1"
django_coverage_plugin = "^1.8.0"
django-graphiql = "^0.4.4"
django-cprofile-middleware = "^1.0.5"
django_debug_toolbar = "^2.2"
django-cors-headers = "^3.5.0"

[tool.black]
line-length = 119
target_version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |src/templates
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
