[tool.poetry]
name = "meertime-data-portal"
version = "3.0.0"
description = ""
authors = ["GWDC"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
django = "4.2.7"
django-environ = "^0.4.5"
gunicorn = "^20.0.4"
sentry-sdk = "^0.16.3"
django-mathfilters = "^1.0.0"
graphene-django = "^2.12.1"
django-graphql-jwt = "^0.3.1"
django-split-settings = "^1.0.1"
bokeh = "^2.2.1"
requests = "^2.24.0"
numpy = "^1.19.4"
sql = "^0.4.0"
django-filter = "^2.4.0"
django-extensions = "^3.0.9"
django-cors-headers = "^3.5.0"
tqdm = "^4.64.1"
django-jenkins = "^0.110.0"
python-dateutil = "^2.8.2"
responses = "^0.23.1"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.7"
scipy = "^1.11.2"
astropy = "^5.3.2"
pyyaml = "6.0.1"
django-querycount = "^0.7.0"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
pyflame = "^0.3.1"
ddtrace = "^2.4.0"
pytest = "^6.0.0"
pytest-django = "^3.9.0"
pylint = "^2.5.3"
black = "^22"
pytest-cov = "^2.10.0"
nplusone = "^1.0.0"
coverage = "^5.2.1"
django-debug-toolbar = "^4.2"
django-graphiql = "^0.4.4"
django-graphiql-debug-toolbar = "^0.2.0"
django_coverage_plugin = "^1.8.0"
django-cprofile-middleware = "^1.0.5"
django-stubs = "^1.8.0"
django-test-migrations = "^1.0.0"
django-coverage-plugin = "^1.8.0"
xenon = "^0.9.1"
model_bakery = "^1.2.1"

[tool.black]
line-length = 119
target_version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |src/templates
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[flake8]
max-line-length = 119
