[tool.poetry]
name = "meertime-data-portal"
version = "3.0.4"
description = ""
authors = ["GWDC"]
license = "MIT"
package-mode = false
classifiers = [
  "Private :: Do not Upload", # Stop project accidentally being uploaded to PyPI
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
django = ">=5.2,<5.3"
django-environ = "^0.4.5"
gunicorn = "^20.0.4"
sentry-sdk = "^0.16.3"
django-mathfilters = "^1.0.0"
graphene-django = "^3.2.3"
django-split-settings = "^1.0.1"
bokeh = "^2.2.1"
requests = "^2.24.0"
numpy = "^1.19.4"
sql = "^0.4.0"
django-filter = "^24.3"
django-extensions = "^3.0.9"
django-cors-headers = "^3.5.0"
tqdm = "^4.64.1"
python-dateutil = "^2.8.2"
responses = "^0.23.1"
djangorestframework = "^3.14.0"
scipy = "^1.11.2"
astropy = "^5.3.2"
pyyaml = "6.0.1"
django-querycount = "^0.7.0"
pytz = "^2024.1"
django-cachalot = "^2.6.3"
django-redis = "^5.4.0"
psycopg = {extras = ["binary"], version = "^3.3.2"}
django4-jenkins = "^1.0.0"
unittest-xml-reporting = "^3.2.0"
tblib = "^3.1.0"
zipstream-ng = "^1.8.0"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
pyflame = "^0.3.1"
ddtrace = "^2.4.0"
pylint = "^2.5.3"
nplusone = "^1.0.0"
coverage = "^5.2.1"
django-debug-toolbar = "*"
django-graphiql = "^0.4.4"
django-graphiql-debug-toolbar = "^0.2.0"
django_coverage_plugin = "^1.8.0"
django-cprofile-middleware = "^1.0.5"
django-stubs = "^1.8.0"
django-test-migrations = "^1.0.0"
django-coverage-plugin = "^1.8.0"
xenon = "^0.9.1"
model_bakery = "^1.2.1"
black = "^24.8.0"
pydotplus = "^2.0.2"
djlint = "^1.36.4"

[tool.black]
line-length = 119
target_version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.tox
  |\.venv
  |src/templates
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.flake8]
max-line-length = 119

[tool.django-stubs]
django_settings_module = "meertime.settings"
